dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=monkycoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=monkycoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=monkycoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=monkycoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=monkycoin-wallet.1
endif
endif
